Align centter fix

--- a/Lab1/stylesheets/style.css
+++ b/Lab1/stylesheets/style.css
@@ -10,12 +10,11 @@ body {
     padding: 10px 0;
     font-weight: bold;
     font-size: 24px;
+    text-align: center;
 }
 
 #page-header > nav > ul {
     list-style: none;
-    display: flex;
-    justify-content: center;
     padding: 0;
 }
 
